--- a/mods/supplementaries.pw.toml
+++ b/mods/supplementaries.pw.toml
@@ -1,13 +1,13 @@
 name = "Supplementaries"
-filename = "supplementaries-1.20-2.6.14-fabric.jar"
+filename = "supplementaries-1.20-2.6.17-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/fFEIiSDQ/versions/A6mwn7Gx/supplementaries-1.20-2.6.14-fabric.jar"
+url = "https://cdn.modrinth.com/data/fFEIiSDQ/versions/gP5827ZW/supplementaries-1.20-2.6.17-fabric.jar"
 hash-format = "sha1"
-hash = "4833ef7a89c702327dd6f98e219733cecffd05fd"
+hash = "b7b65eb0526ab00320b172699f63bee2a38a2626"
 
 [update]
 [update.modrinth]
 mod-id = "fFEIiSDQ"
-version = "A6mwn7Gx"
+version = "gP5827ZW"
