--- a/mods/grass-seeds.pw.toml
+++ b/mods/grass-seeds.pw.toml
@@ -1,13 +1,13 @@
 name = "Grass Seeds"
-filename = "grassseeds-1.20.1-3.0.jar"
-side = "both"
+filename = "grassseeds-1.20.1-3.2.jar"
+side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/Y6d4uRJn/versions/6kZvU8h9/grassseeds-1.20.1-3.0.jar"
+url = "https://cdn.modrinth.com/data/Y6d4uRJn/versions/Eb3Jj0un/grassseeds-1.20.1-3.2.jar"
 hash-format = "sha1"
-hash = "df83daa840cffd423a312465c158f5305f252efe"
+hash = "df4e6dd4e2d482be3200af6f77c1ac90dc3f0f74"
 
 [update]
 [update.modrinth]
 mod-id = "Y6d4uRJn"
-version = "6kZvU8h9"
+version = "Eb3Jj0un"
