--- a/mods/better-stats.pw.toml
+++ b/mods/better-stats.pw.toml
@@ -1,13 +1,13 @@
 name = "Better Statistics Screen"
-filename = "betterstats-3.4+fabric-1.20.1.jar"
+filename = "betterstats-3.8.1+fabric-1.20.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/n6PXGAoM/versions/1weQYuP0/betterstats-3.4%2Bfabric-1.20.1.jar"
+url = "https://cdn.modrinth.com/data/n6PXGAoM/versions/71Ie3Fad/betterstats-3.8.1%2Bfabric-1.20.1.jar"
 hash-format = "sha1"
-hash = "8071245d4bcf0fd8c6ede2aa93343d44cc3a3539"
+hash = "61dc7aa4168fbcd2613e481a32b7ec9b819cfd2b"
 
 [update]
 [update.modrinth]
 mod-id = "n6PXGAoM"
-version = "1weQYuP0"
+version = "71Ie3Fad"
