--- a/mods/cc-tweaked.pw.toml
+++ b/mods/cc-tweaked.pw.toml
@@ -1,13 +1,13 @@
 name = "CC: Tweaked"
-filename = "cc-tweaked-1.20.1-fabric-1.108.3.jar"
+filename = "cc-tweaked-1.20.1-fabric-1.109.5.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/gu7yAYhd/versions/taNGLI3t/cc-tweaked-1.20.1-fabric-1.108.3.jar"
+url = "https://cdn.modrinth.com/data/gu7yAYhd/versions/TIcIRRWa/cc-tweaked-1.20.1-fabric-1.109.5.jar"
 hash-format = "sha1"
-hash = "ec30e90bffccd9471b094d94ce3ea55200f4a071"
+hash = "04808cf6d719055b517e04044416c814e81c2c91"
 
 [update]
 [update.modrinth]
 mod-id = "gu7yAYhd"
-version = "taNGLI3t"
+version = "TIcIRRWa"
