--- a/mods/chat-heads.pw.toml
+++ b/mods/chat-heads.pw.toml
@@ -1,13 +1,13 @@
 name = "Chat Heads"
-filename = "chat_heads-0.10.22-fabric-1.20.jar"
+filename = "chat_heads-0.10.31-fabric-1.20.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Wb5oqrBJ/versions/gzgdiHby/chat_heads-0.10.22-fabric-1.20.jar"
+url = "https://cdn.modrinth.com/data/Wb5oqrBJ/versions/68f3pu0P/chat_heads-0.10.31-fabric-1.20.jar"
 hash-format = "sha1"
-hash = "9a591c62cfbff2ed7ff314ae8b6dd83f4ce4613b"
+hash = "7eca61a04adf62afce0ad9d279fffbabcd90792c"
 
 [update]
 [update.modrinth]
 mod-id = "Wb5oqrBJ"
-version = "gzgdiHby"
+version = "68f3pu0P"
