--- a/mods/chunky.pw.toml
+++ b/mods/chunky.pw.toml
@@ -3,11 +3,11 @@ filename = "Chunky-1.3.92.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/fALzjamp/versions/t8SbUchF/Chunky-1.3.92.jar"
+url = "https://cdn.modrinth.com/data/fALzjamp/versions/iwsbfPGg/Chunky-1.3.138.jar"
 hash-format = "sha1"
-hash = "91f8daeeaab0f3114016fb1d45822179701862bf"
+hash = "969376ec42b70d8cb90829d6fa7e79d54ee1a039"
 
 [update]
 [update.modrinth]
 mod-id = "fALzjamp"
-version = "t8SbUchF"
+version = "iwsbfPGg"
