--- a/mods/do-a-barrel-roll.pw.toml
+++ b/mods/do-a-barrel-roll.pw.toml
@@ -1,13 +1,13 @@
 name = "Do a Barrel Roll"
-filename = "do-a-barrel-roll-3.3.5+1.20-fabric.jar"
-side = "both"
+filename = "do-a-barrel-roll-3.3.7+1.20-fabric.jar"
+side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/6FtRfnLg/versions/cjOnrxD6/do-a-barrel-roll-3.3.5%2B1.20-fabric.jar"
+url = "https://cdn.modrinth.com/data/6FtRfnLg/versions/S0QngIQM/do-a-barrel-roll-3.3.7%2B1.20-fabric.jar"
 hash-format = "sha1"
-hash = "bf7dc4d7f58b47da0105f9e365522f3e3ca16aeb"
+hash = "956e53b2f8dbc2c582b134e77b637be0fe2d9fe3"
 
 [update]
 [update.modrinth]
 mod-id = "6FtRfnLg"
-version = "cjOnrxD6"
+version = "S0QngIQM"
