--- a/mods/pick-up-notifier.pw.toml
+++ b/mods/pick-up-notifier.pw.toml
@@ -1,6 +1,6 @@
 name = "Pick Up Notifier"
 filename = "PickUpNotifier-v8.0.0-1.20.1-Fabric.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/ZX66K16c/versions/sdb70E1E/PickUpNotifier-v8.0.0-1.20.1-Fabric.jar"
