--- a/mods/plethora-peripherals.pw.toml
+++ b/mods/plethora-peripherals.pw.toml
@@ -1,13 +1,13 @@
 name = "Plethora Peripherals"
-filename = "Plethora-Fabric-1.9.1.jar"
+filename = "Plethora-Fabric-1.9.4.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/LDfFdCXe/versions/nKaBHoaS/Plethora-Fabric-1.9.1.jar"
+url = "https://cdn.modrinth.com/data/LDfFdCXe/versions/5pxGGDeh/Plethora-Fabric-1.9.4.jar"
 hash-format = "sha1"
-hash = "14c106c0a7bd8c81308200d353ea5deafab1bd46"
+hash = "f74a2ffac847c3e4d1e78f1ab719b337c4f9f873"
 
 [update]
 [update.modrinth]
 mod-id = "LDfFdCXe"
-version = "nKaBHoaS"
+version = "5pxGGDeh"
