--- a/mods/spyglass-astronomy.pw.toml
+++ b/mods/spyglass-astronomy.pw.toml
@@ -1,13 +1,13 @@
 name = "Spyglass Astronomy"
-filename = "spyglass_astronomy-1.0.8-mc1.20+.jar"
+filename = "spyglass_astronomy-1.0.10-mc1.20.0-1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/EdBSdqge/versions/aUuB0C1I/spyglass_astronomy-1.0.8-mc1.20%2B.jar"
+url = "https://cdn.modrinth.com/data/EdBSdqge/versions/4VNDz5WH/spyglass_astronomy-1.0.10-mc1.20.0-1.jar"
 hash-format = "sha1"
-hash = "9fa40be64e207c20001821b060bc66224747cb5a"
+hash = "b6476e8bed0780aaa430b77f0b82e199b537acca"
 
 [update]
 [update.modrinth]
 mod-id = "EdBSdqge"
-version = "aUuB0C1I"
+version = "4VNDz5WH"
