--- a/mods/vivecraft.pw.toml
+++ b/mods/vivecraft.pw.toml
@@ -1,13 +1,13 @@
 name = "Vivecraft"
-filename = "vivecraft-1.20.1-1.1.2-fabric.jar"
+filename = "vivecraft-1.20.1-1.1.5-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/wGoQDPN5/versions/D1NT0xDw/vivecraft-1.20.1-1.1.2-fabric.jar"
+url = "https://cdn.modrinth.com/data/wGoQDPN5/versions/vrh0E2re/vivecraft-1.20.1-1.1.5-fabric.jar"
 hash-format = "sha1"
-hash = "2f2d44ed60ae712c076ba5b68f964251902d64fa"
+hash = "6e17780dbe0ca6400c2f22cc90ac3d931331a4c5"
 
 [update]
 [update.modrinth]
 mod-id = "wGoQDPN5"
-version = "D1NT0xDw"
+version = "vrh0E2re"
