--- a/mods/xaeros-minimap.pw.toml
+++ b/mods/xaeros-minimap.pw.toml
@@ -1,13 +1,13 @@
 name = "Xaero's Minimap"
-filename = "Xaeros_Minimap_23.8.4_Fabric_1.20.jar"
+filename = "Xaeros_Minimap_23.9.7_Fabric_1.20.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/1bokaNcj/versions/3l0ZI6yD/Xaeros_Minimap_23.8.4_Fabric_1.20.jar"
+url = "https://cdn.modrinth.com/data/1bokaNcj/versions/rbY8QUIj/Xaeros_Minimap_23.9.7_Fabric_1.20.jar"
 hash-format = "sha1"
-hash = "d6e9a6619c0a84042275698c133d147a7544c56b"
+hash = "15b16b9bd9de172128029aa1318fb24cfa515ec9"
 
 [update]
 [update.modrinth]
 mod-id = "1bokaNcj"
-version = "3l0ZI6yD"
+version = "rbY8QUIj"
