--- a/mods/xaeros-world-map.pw.toml
+++ b/mods/xaeros-world-map.pw.toml
@@ -1,13 +1,13 @@
 name = "Xaero's World Map"
-filename = "XaerosWorldMap_1.36.0_Fabric_1.20.jar"
+filename = "XaerosWorldMap_1.37.8_Fabric_1.20.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/NcUtCpym/versions/s974wWCK/XaerosWorldMap_1.36.0_Fabric_1.20.jar"
+url = "https://cdn.modrinth.com/data/NcUtCpym/versions/RR2qcEow/XaerosWorldMap_1.37.8_Fabric_1.20.jar"
 hash-format = "sha1"
-hash = "d55d9643c8e09c3cb5e92c5d3b7f1458b59a3499"
+hash = "da26e28068b1086da1dbfa88e8a3220dd06c913c"
 
 [update]
 [update.modrinth]
 mod-id = "NcUtCpym"
-version = "s974wWCK"
+version = "RR2qcEow"
