Updated fabric version and stuff

--- a/index.toml
+++ b/index.toml
@@ -1,33 +1,6 @@
 hash-format = "sha256"
 
 [[files]]
-file = "config/bclib/client.json"
-
-[[files]]
-file = "config/bclib/server.json"
-
-[[files]]
-file = "config/paxi/datapack_load_order.json"
-
-[[files]]
-file = "config/paxi/datapacks/better-villages-bountiful.pw.toml"
-metafile = true
-
-[[files]]
-file = "config/paxi/datapacks/ctov-friends-and-foes-compat.pw.toml"
-metafile = true
-
-[[files]]
-file = "config/paxi/resourcepack_load_order.json"
-
-[[files]]
-file = "config/paxi/resourcepacks/advancement-plaques-with-vines.pw.toml"
-metafile = true
-
-[[files]]
-file = "config/presencefootsteps/updater.json"
-
-[[files]]
 file = "mods/advancement-plaques.pw.toml"
 metafile = true
 
@@ -268,6 +241,10 @@ file = "mods/lithium.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/lithostitched.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/lootr.pw.toml"
 metafile = true
 
@@ -281,6 +258,10 @@ metafile = true
 
 [[files]]
 file = "mods/mavm.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/melody.pw.toml"
 metafile = true
 
 [[files]]
@@ -316,6 +297,10 @@ file = "mods/moyai.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/mru.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/mystical-oak-tree.pw.toml"
 metafile = true
 
@@ -341,10 +326,6 @@ metafile = true
 
 [[files]]
 file = "mods/pick-up-notifier.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/ping-wheel.pw.toml"
 metafile = true
 
 [[files]]
