Unremove accidentally removed configs

--- a/index.toml
+++ b/index.toml
@@ -1,6 +1,33 @@
 hash-format = "sha256"
 
 [[files]]
+file = "config/bclib/client.json"
+
+[[files]]
+file = "config/bclib/server.json"
+
+[[files]]
+file = "config/paxi/datapack_load_order.json"
+
+[[files]]
+file = "config/paxi/datapacks/better-villages-bountiful.pw.toml"
+metafile = true
+
+[[files]]
+file = "config/paxi/datapacks/ctov-friends-and-foes-compat.pw.toml"
+metafile = true
+
+[[files]]
+file = "config/paxi/resourcepack_load_order.json"
+
+[[files]]
+file = "config/paxi/resourcepacks/advancement-plaques-with-vines.pw.toml"
+metafile = true
+
+[[files]]
+file = "config/presencefootsteps/updater.json"
+
+[[files]]
 file = "mods/advancement-plaques.pw.toml"
 metafile = true
 
@@ -10,10 +37,6 @@ metafile = true
 
 [[files]]
 file = "mods/appleskin.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/architectury-api.pw.toml"
 metafile = true
 
 [[files]]
