--- a/mods/sodium.pw.toml
+++ b/mods/sodium.pw.toml
@@ -1,13 +1,13 @@
 name = "Sodium"
-filename = "sodium-fabric-0.5.8+mc1.20.1.jar"
+filename = "sodium-fabric-mc1.20.2-0.5.3.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/AANobbMI/versions/mhZtY2lR/sodium-fabric-0.5.8%2Bmc1.20.1.jar"
+url = "https://cdn.modrinth.com/data/AANobbMI/versions/bbP1qBMr/sodium-fabric-mc1.20.2-0.5.3.jar"
 hash-format = "sha1"
-hash = "bdd6b8ac84b46ae56a3bbb761ce430c48e42e00d"
+hash = "37d1fb5be973beba13b88ae6a6f8158dc80a12ad"
 
 [update]
 [update.modrinth]
 mod-id = "AANobbMI"
-version = "mhZtY2lR"
+version = "bbP1qBMr"
