--- a/mods/iris.pw.toml
+++ b/mods/iris.pw.toml
@@ -1,13 +1,13 @@
 name = "Iris Shaders"
-filename = "iris-mc1.20.1-1.6.17.jar"
+filename = "iris-mc1.20.1-1.6.11.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/YL57xq9U/versions/JHbrO6Zq/iris-mc1.20.1-1.6.17.jar"
+url = "https://cdn.modrinth.com/data/YL57xq9U/versions/ogjxrwGQ/iris-mc1.20.1-1.6.11.jar"
 hash-format = "sha1"
-hash = "daaa0a952273301117d3dc42bde68c6f1f60b318"
+hash = "11c22bb87b55a7991663f2187490b25ea9c9f698"
 
 [update]
 [update.modrinth]
 mod-id = "YL57xq9U"
-version = "JHbrO6Zq"
+version = "ogjxrwGQ"
