Added farmers delight & chefs delight + CTOV compat for those, + beautify

--- a/config/paxi/datapacks/better-villages-bountiful.pw.toml
+++ b/config/paxi/datapacks/better-villages-bountiful.pw.toml
@@ -1,6 +1,6 @@
 name = "Better Villages - Bountiful Compatibility"
 filename = "BetterVillages_Bountiful_1.19.4.zip"
-side = "both"
+side = "server"
 
 [download]
 hash-format = "sha1"
