--- a/mods/better-village-fabric.pw.toml
+++ b/mods/better-village-fabric.pw.toml
@@ -1,6 +1,6 @@
 name = "Better Villages - Fabric"
 filename = "bettervillage-fabric-1.20.1-3.2.0.jar"
-side = "both"
+side = "server"
 
 [download]
 hash-format = "sha1"
