--- a/index.toml
+++ b/index.toml
@@ -21,6 +21,10 @@ file = "config/paxi/resourcepacks/advancement-plaques-with-vines.pw.toml"
 metafile = true
 
 [[files]]
+file = "config/paxi/resourcepacks/creeper-overhaul-overhaul.pw.toml"
+metafile = true
+
+[[files]]
 file = "config/presencefootsteps/updater.json"
 
 [[files]]
@@ -83,11 +87,19 @@ file = "mods/content/mobs/axolotl-bucket-fix.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/content/mobs/creeper-overhaul.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/content/mobs/ender-zoology.pw.toml"
 metafile = true
 
 [[files]]
 file = "mods/content/mobs/friends-and-foes.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/mobs/lovely_snails.pw.toml"
 metafile = true
 
 [[files]]
@@ -175,6 +187,10 @@ file = "mods/libraries/forge-config-api-port.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/libraries/geckolib.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/libraries/iceberg.pw.toml"
 metafile = true
 
@@ -227,6 +243,10 @@ file = "mods/libraries/puzzles-lib.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/libraries/resourceful-config.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/libraries/searchables.pw.toml"
 metafile = true
 
@@ -260,6 +280,10 @@ metafile = true
 
 [[files]]
 file = "mods/overhauls/easy-magic.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/overhauls/endrem.pw.toml"
 metafile = true
 
 [[files]]
