--- a/index.toml
+++ b/index.toml
@@ -35,19 +35,15 @@ file = "mods/advancement-frames.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/another-furniture.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/better-archeology.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/better-lily-pads.pw.toml"
+file = "mods/content/better-archeology.pw.toml"
 metafile = true
 
 [[files]]
 file = "mods/content/bountiful.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/building/another-furniture.pw.toml"
 metafile = true
 
 [[files]]
@@ -60,6 +56,14 @@ metafile = true
 
 [[files]]
 file = "mods/content/building/connectible_chains.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/building/hearth-and-home.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/building/nightlights.pw.toml"
 metafile = true
 
 [[files]]
@@ -107,11 +111,23 @@ file = "mods/content/mobs/creeper-overhaul.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/content/mobs/duckling.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/content/mobs/ender-zoology.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/content/mobs/enderman-overhaul.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/content/mobs/friends-and-foes.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/mobs/hamsters.pw.toml"
 metafile = true
 
 [[files]]
@@ -123,15 +139,23 @@ file = "mods/content/mobs/mavm.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/content/mobs/more-mob-variants.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/mobs/naturalist.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/content/mobs/promenade.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/content/mobs/snuffles-fabric.pw.toml"
 metafile = true
 
 [[files]]
 file = "mods/content/mobs/tiny-skeletons.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/content/promenade.pw.toml"
 metafile = true
 
 [[files]]
@@ -183,31 +207,11 @@ file = "mods/content/silly/mystical-oak-tree.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/duckling.pw.toml"
+file = "mods/content/supplementaries-squared.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/enderman-overhaul.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/fast-paintings.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/goated.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/hamsters.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/hearth-and-home.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/highlight.pw.toml"
+file = "mods/friends-and-foes-flowery-mooblooms-fabric.pw.toml"
 metafile = true
 
 [[files]]
@@ -303,6 +307,10 @@ file = "mods/libraries/resourceful-config.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/libraries/resourceful-lib.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/libraries/searchables.pw.toml"
 metafile = true
 
@@ -319,15 +327,7 @@ file = "mods/libraries/yungs-api.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/more-mob-variants.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/naturalist.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/nightlights.pw.toml"
+file = "mods/more-mobs.pw.toml"
 metafile = true
 
 [[files]]
@@ -423,6 +423,10 @@ file = "mods/performance/clumps.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/performance/fast-paintings.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/performance/ferrite-core.pw.toml"
 metafile = true
 
@@ -467,14 +471,6 @@ file = "mods/performance/spark.pw.toml"
 metafile = true
 
 [[files]]
-file = "mods/resourceful-lib.pw.toml"
-metafile = true
-
-[[files]]
-file = "mods/supplementaries-squared.pw.toml"
-metafile = true
-
-[[files]]
 file = "mods/tweaks/audio/plasmo-voice.pw.toml"
 metafile = true
 
@@ -499,6 +495,10 @@ file = "mods/tweaks/claims/open-parties-and-claims.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/tweaks/gameplay/better-lily-pads.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/tweaks/gameplay/block-runner.pw.toml"
 metafile = true
 
@@ -520,6 +520,10 @@ metafile = true
 
 [[files]]
 file = "mods/tweaks/gameplay/diagonal-windows.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/gameplay/goated.pw.toml"
 metafile = true
 
 [[files]]
@@ -552,6 +556,10 @@ metafile = true
 
 [[files]]
 file = "mods/tweaks/hud/chat-heads.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/tweaks/hud/highlight.pw.toml"
 metafile = true
 
 [[files]]
