--- a/index.toml
+++ b/index.toml
@@ -239,6 +239,14 @@ file = "mods/content/supplementaries-squared.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/hex-casting.pw.toml"
+metafile = true
+
+[[files]]
+file = "mods/hexlands.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/labels.pw.toml"
 metafile = true
 
