--- a/index.toml
+++ b/index.toml
@@ -447,6 +447,10 @@ file = "mods/patchouli.pw.toml"
 metafile = true
 
 [[files]]
+file = "mods/paucal.pw.toml"
+metafile = true
+
+[[files]]
 file = "mods/performance/bobby.pw.toml"
 metafile = true
 
