--- a/mods/emi-loot.pw.toml
+++ b/mods/emi-loot.pw.toml
@@ -1,6 +1,6 @@
 name = "EMI Loot"
 filename = "emi_loot-0.6.5+1.20.1.jar"
-side = "both"
+side = "client"
 
 [download]
 url = "https://cdn.modrinth.com/data/qbbO7Jns/versions/7fjkgVEh/emi_loot-0.6.5%2B1.20.1.jar"
