--- a/mods/emi/emi-ores.pw.toml
+++ b/mods/emi/emi-ores.pw.toml
@@ -1,6 +1,6 @@
 name = "EMI Ores"
 filename = "emi_ores-0.1+1.20.1.jar"
-side = "client"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/sG4TqDb8/versions/K2C8n7Zi/emi_ores-0.1%2B1.20.1.jar"
