--- a/mods/libraries/moonlight.pw.toml
+++ b/mods/libraries/moonlight.pw.toml
@@ -1,13 +1,13 @@
 name = "Moonlight Lib"
-filename = "moonlight-1.20-2.9.17-fabric.jar"
+filename = "moonlight-1.20-2.10.3-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/twkfQtEc/versions/WRTGYYwK/moonlight-1.20-2.9.17-fabric.jar"
+url = "https://cdn.modrinth.com/data/twkfQtEc/versions/cP4hkgv1/moonlight-1.20-2.10.3-fabric.jar"
 hash-format = "sha1"
-hash = "edb20a8086b67f959be835776acf844824016832"
+hash = "bf71afdf4adf39fab90047d585c474c377831a09"
 
 [update]
 [update.modrinth]
 mod-id = "twkfQtEc"
-version = "WRTGYYwK"
+version = "cP4hkgv1"
